@@ -248,6 +248,10 @@ if(HAVE_CLOCK_GETTIME AND CMAKE_SYSTEM_NAME MATCHES "Linux")
   list(APPEND POCL_PRIVATE_LINK_LIST "rt")
 endif()
 
+if(HAVE_64BIT_ATOMICS_WITH_LIB)
+  list(APPEND POCL_PRIVATE_LINK_LIST "atomic")
+endif()
+
 list(APPEND POCL_PRIVATE_LINK_LIST ${LIBMATH} ${CMAKE_DL_LIBS} ${PTHREAD_LIBRARY})
 
 # see lib/CMakeLists.txt
