@@ -14,6 +14,8 @@ Notable User Facing Changes
 - All device names used to control the platform setup via
   POCL_DEVICES are now lower case (as documented in the user manual).
 - Switch from __sync_*() to __atomic_*() (compiler builtins).
+- Link with -latomic (compiler library) in case that is needed for using
+  64-bit atomic operations, e.g. on mipsel.
 
 3.0 June 2022
 =============
